--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port = 8080
+
+#DB connection
+database.url=jdbc:mysql://localhost:3306/user_info
+database.username=root
+database.password=1234
