--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.port = 8080
 database.url=jdbc:mysql://localhost:3306/user_info
 database.username=root
 database.password=1234
+
+spring.thymeleaf.cache=false
