--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,13 @@ database.username=root
 database.password=1234
 
 spring.thymeleaf.cache=false
+
+#Database
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/user_info
+spring.datasource.username=root
+spring.datasource.password=1234
+
+#JPA + Hibernate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
